k8s/altair/apps/authentik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.greedo.net`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
  tls: {}
